fix : Quest05 explorer 파일 목록 overflow - max-width 도달시 word-break되어 width가 제대로 확보되지 않고, 이에 overflow 스크롤이 발생하지 않던 문제 해결

--- a/Quest05/skeleton/css/layout.css
+++ b/Quest05/skeleton/css/layout.css
@@ -32,6 +32,7 @@
 .l-nav-button-title {
   margin: 0;
   padding: 0;
+  word-break: keep-all;
 }
 
 .l-nav-button-state {
